--- a/Operators.csproj
+++ b/Operators.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Add.cs" />
+    <Compile Include="Types\ComputeShader.cs" />
     <Compile Include="Types\Dashboard.cs" />
     <Compile Include="Types\FloatFormat.cs" />
     <Compile Include="Types\FloatMultiInputToList.cs" />
