Added simple op to trigger compute stage and show output

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Types\ComputeShaderStage.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
+    <Compile Include="Types\ShowTexture2d.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
     <Compile Include="Types\TimeConstBuffer.cs" />
     <Compile Include="Types\Dashboard.cs" />
