--- a/Operators.csproj
+++ b/Operators.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Types\Add.cs" />
     <Compile Include="Types\ComputeShader.cs" />
     <Compile Include="Types\ComputeShaderStage.cs" />
+    <Compile Include="Types\ComputeStageExample.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
