--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
   <package id="SharpDX" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net471" />
 </packages>
