--- a/packages.config
+++ b/packages.config
@@ -4,4 +4,5 @@
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
 </packages>
