Added draft for vertex shader, vertex shader and input assember stage

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Types\ComputeShaderStage.cs" />
     <Compile Include="Types\ComputeStageExample.cs" />
     <Compile Include="Types\ComputeWobble.cs" />
+    <Compile Include="Types\InputAssemberStage.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
@@ -82,6 +83,8 @@
     <Compile Include="Types\Texture2d.cs" />
     <Compile Include="Types\Time.cs" />
     <Compile Include="Types\UavFromTexture2d.cs" />
+    <Compile Include="Types\VertexShader.cs" />
+    <Compile Include="Types\VertexShaderStage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Types\Add_c160f925-0a66-4505-a569-cadd878dbb6f.t3" />
@@ -102,6 +105,8 @@
     <Content Include="Types\FloatFormat_39c96cfd-dedf-4f76-a471-d1c26c9ba9fa.t3ui" />
     <Content Include="Types\FloatMultiInputToList_5c5d855c-3167-40a3-b4c3-e7b27b0d61cf.t3" />
     <Content Include="Types\FloatMultiInputToList_5c5d855c-3167-40a3-b4c3-e7b27b0d61cf.t3ui" />
+    <Content Include="Types\InputAssemblerShaderStage_9d1266c5-23db-439f-a475-8000fdd1c318.t3" />
+    <Content Include="Types\InputAssemblerShaderStage_9d1266c5-23db-439f-a475-8000fdd1c318.t3ui" />
     <Content Include="Types\LoadTexture2d_0b3436db-e283-436e-ba85-2f3a1de76a9d.t3" />
     <Content Include="Types\LoadTexture2d_0b3436db-e283-436e-ba85-2f3a1de76a9d.t3ui" />
     <Content Include="Types\ParamConstBuffer_c30542d5-609c-452a-9168-78964a3a0927.t3" />
@@ -132,6 +137,10 @@
     <Content Include="Types\Time_862de1a8-f630-4823-8860-7afa918bb1bc.t3ui" />
     <Content Include="Types\UavFromTexture2d_84e02044-3011-4a5e-b76a-c904d9b4557f.t3" />
     <Content Include="Types\UavFromTexture2d_84e02044-3011-4a5e-b76a-c904d9b4557f.t3ui" />
+    <Content Include="Types\VertexShaderStage_a9600440-4203-4315-bdb1-4dfd603b4515.t3" />
+    <Content Include="Types\VertexShaderStage_a9600440-4203-4315-bdb1-4dfd603b4515.t3ui" />
+    <Content Include="Types\VertexShader_646f5988-0a76-4996-a538-ba48054fd0ad.t3" />
+    <Content Include="Types\VertexShader_646f5988-0a76-4996-a538-ba48054fd0ad.t3ui" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
