--- a/Operators.csproj
+++ b/Operators.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Types\ComputeShaderStage.cs" />
     <Compile Include="Types\ComputeStageExample.cs" />
     <Compile Include="Types\ComputeWobble.cs" />
-    <Compile Include="Types\InputAssemberStage.cs" />
+    <Compile Include="Types\InputAssembler.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
@@ -105,8 +105,8 @@
     <Content Include="Types\FloatFormat_39c96cfd-dedf-4f76-a471-d1c26c9ba9fa.t3ui" />
     <Content Include="Types\FloatMultiInputToList_5c5d855c-3167-40a3-b4c3-e7b27b0d61cf.t3" />
     <Content Include="Types\FloatMultiInputToList_5c5d855c-3167-40a3-b4c3-e7b27b0d61cf.t3ui" />
-    <Content Include="Types\InputAssemblerShaderStage_9d1266c5-23db-439f-a475-8000fdd1c318.t3" />
-    <Content Include="Types\InputAssemblerShaderStage_9d1266c5-23db-439f-a475-8000fdd1c318.t3ui" />
+    <Content Include="Types\InputAssembler_9d1266c5-23db-439f-a475-8000fdd1c318.t3" />
+    <Content Include="Types\InputAssembler_9d1266c5-23db-439f-a475-8000fdd1c318.t3ui" />
     <Content Include="Types\LoadTexture2d_0b3436db-e283-436e-ba85-2f3a1de76a9d.t3" />
     <Content Include="Types\LoadTexture2d_0b3436db-e283-436e-ba85-2f3a1de76a9d.t3ui" />
     <Content Include="Types\ParamConstBuffer_c30542d5-609c-452a-9168-78964a3a0927.t3" />
