--- a/Operators.csproj
+++ b/Operators.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Types\ComputeWobble.cs" />
     <Compile Include="Types\InputAssembler.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
+    <Compile Include="Types\Rasterizer.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
@@ -115,6 +116,8 @@
     <Content Include="Types\Project_c9a7e71c-7311-4d1e-8508-cd580d7a0b8d.t3ui" />
     <Content Include="Types\Random_10673c38-8c7e-4aa1-8dcd-3f2711c709b5.t3" />
     <Content Include="Types\Random_10673c38-8c7e-4aa1-8dcd-3f2711c709b5.t3ui" />
+    <Content Include="Types\Rasterizer_fbd7f0f0-36a3-4fbb-91e1-cb33d4666d09.t3" />
+    <Content Include="Types\Rasterizer_fbd7f0f0-36a3-4fbb-91e1-cb33d4666d09.t3ui" />
     <Content Include="Types\SamplerStateOp_9515d59d-0bd5-406b-96da-6a5f60215700.t3" />
     <Content Include="Types\SamplerStateOp_9515d59d-0bd5-406b-96da-6a5f60215700.t3ui" />
     <Content Include="Types\SelectFloatFromList_0841cdd4-0106-4f4e-826b-8de23bb5b5f0.t3" />
