Added inputs to output merger op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Types\ComputeStageExample.cs" />
     <Compile Include="Types\ComputeWobble.cs" />
     <Compile Include="Types\InputAssembler.cs" />
-    <Compile Include="Types\OutputMerger.cs" />
+    <Compile Include="Types\OutputMergerStage.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
     <Compile Include="Types\Rasterizer.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
