--- a/Operators.csproj
+++ b/Operators.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Types\InputAssembler.cs" />
     <Compile Include="Types\OutputMergerStage.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
+    <Compile Include="Types\PixelShader.cs" />
+    <Compile Include="Types\PixelShaderStage.cs" />
     <Compile Include="Types\Rasterizer.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
@@ -113,6 +115,10 @@
     <Content Include="Types\LoadTexture2d_0b3436db-e283-436e-ba85-2f3a1de76a9d.t3ui" />
     <Content Include="Types\ParamConstBuffer_c30542d5-609c-452a-9168-78964a3a0927.t3" />
     <Content Include="Types\ParamConstBuffer_c30542d5-609c-452a-9168-78964a3a0927.t3ui" />
+    <Content Include="Types\PixelShaderStage_75306997-4329-44e9-a17a-050dae532182.t3" />
+    <Content Include="Types\PixelShaderStage_75306997-4329-44e9-a17a-050dae532182.t3ui" />
+    <Content Include="Types\PixelShader_f7c625da-fede-4993-976c-e259e0ee4985.t3" />
+    <Content Include="Types\PixelShader_f7c625da-fede-4993-976c-e259e0ee4985.t3ui" />
     <Content Include="Types\Project_c9a7e71c-7311-4d1e-8508-cd580d7a0b8d.t3" />
     <Content Include="Types\Project_c9a7e71c-7311-4d1e-8508-cd580d7a0b8d.t3ui" />
     <Content Include="Types\Random_10673c38-8c7e-4aa1-8dcd-3f2711c709b5.t3" />
