--- a/Operators.csproj
+++ b/Operators.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Types\PixelShader.cs" />
     <Compile Include="Types\PixelShaderStage.cs" />
     <Compile Include="Types\Rasterizer.cs" />
+    <Compile Include="Types\RasterizerStateOp.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
@@ -89,68 +90,6 @@
     <Compile Include="Types\UavFromTexture2d.cs" />
     <Compile Include="Types\VertexShader.cs" />
     <Compile Include="Types\VertexShaderStage.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Types\Add_c160f925-0a66-4505-a569-cadd878dbb6f.t3" />
-    <Content Include="Types\Add_c160f925-0a66-4505-a569-cadd878dbb6f.t3ui" />
-    <Content Include="Types\ColorGrade_e242e0d8-ff71-4742-9aab-6bdfcb285afc.t3" />
-    <Content Include="Types\ColorGrade_e242e0d8-ff71-4742-9aab-6bdfcb285afc.t3ui" />
-    <Content Include="Types\ComputeShaderStage_8bef116d-7d1c-4c1b-b902-25c1d5e925a9.t3" />
-    <Content Include="Types\ComputeShaderStage_8bef116d-7d1c-4c1b-b902-25c1d5e925a9.t3ui" />
-    <Content Include="Types\ComputeShader_a256d70f-adb3-481d-a926-caf35bd3e64c.t3" />
-    <Content Include="Types\ComputeShader_a256d70f-adb3-481d-a926-caf35bd3e64c.t3ui" />
-    <Content Include="Types\ComputeStageExample_25bf7552-68fa-463a-a0f6-8138b8688f9a.t3" />
-    <Content Include="Types\ComputeStageExample_25bf7552-68fa-463a-a0f6-8138b8688f9a.t3ui" />
-    <Content Include="Types\ComputeWobble_7b95571c-8391-4313-a008-7020a14887f4.t3" />
-    <Content Include="Types\ComputeWobble_7b95571c-8391-4313-a008-7020a14887f4.t3ui" />
-    <Content Include="Types\Dashboard_dab61a12-9996-401e-9aa6-328dd6292beb.t3" />
-    <Content Include="Types\Dashboard_dab61a12-9996-401e-9aa6-328dd6292beb.t3ui" />
-    <Content Include="Types\FloatFormat_39c96cfd-dedf-4f76-a471-d1c26c9ba9fa.t3" />
-    <Content Include="Types\FloatFormat_39c96cfd-dedf-4f76-a471-d1c26c9ba9fa.t3ui" />
-    <Content Include="Types\FloatMultiInputToList_5c5d855c-3167-40a3-b4c3-e7b27b0d61cf.t3" />
-    <Content Include="Types\FloatMultiInputToList_5c5d855c-3167-40a3-b4c3-e7b27b0d61cf.t3ui" />
-    <Content Include="Types\InputAssembler_9d1266c5-23db-439f-a475-8000fdd1c318.t3" />
-    <Content Include="Types\InputAssembler_9d1266c5-23db-439f-a475-8000fdd1c318.t3ui" />
-    <Content Include="Types\LoadTexture2d_0b3436db-e283-436e-ba85-2f3a1de76a9d.t3" />
-    <Content Include="Types\LoadTexture2d_0b3436db-e283-436e-ba85-2f3a1de76a9d.t3ui" />
-    <Content Include="Types\ParamConstBuffer_c30542d5-609c-452a-9168-78964a3a0927.t3" />
-    <Content Include="Types\ParamConstBuffer_c30542d5-609c-452a-9168-78964a3a0927.t3ui" />
-    <Content Include="Types\PixelShaderStage_75306997-4329-44e9-a17a-050dae532182.t3" />
-    <Content Include="Types\PixelShaderStage_75306997-4329-44e9-a17a-050dae532182.t3ui" />
-    <Content Include="Types\PixelShader_f7c625da-fede-4993-976c-e259e0ee4985.t3" />
-    <Content Include="Types\PixelShader_f7c625da-fede-4993-976c-e259e0ee4985.t3ui" />
-    <Content Include="Types\Project_c9a7e71c-7311-4d1e-8508-cd580d7a0b8d.t3" />
-    <Content Include="Types\Project_c9a7e71c-7311-4d1e-8508-cd580d7a0b8d.t3ui" />
-    <Content Include="Types\Random_10673c38-8c7e-4aa1-8dcd-3f2711c709b5.t3" />
-    <Content Include="Types\Random_10673c38-8c7e-4aa1-8dcd-3f2711c709b5.t3ui" />
-    <Content Include="Types\Rasterizer_fbd7f0f0-36a3-4fbb-91e1-cb33d4666d09.t3" />
-    <Content Include="Types\Rasterizer_fbd7f0f0-36a3-4fbb-91e1-cb33d4666d09.t3ui" />
-    <Content Include="Types\SamplerStateOp_9515d59d-0bd5-406b-96da-6a5f60215700.t3" />
-    <Content Include="Types\SamplerStateOp_9515d59d-0bd5-406b-96da-6a5f60215700.t3ui" />
-    <Content Include="Types\SelectFloatFromList_0841cdd4-0106-4f4e-826b-8de23bb5b5f0.t3" />
-    <Content Include="Types\SelectFloatFromList_0841cdd4-0106-4f4e-826b-8de23bb5b5f0.t3ui" />
-    <Content Include="Types\ShowTexture2d_b0212daa-7fba-4f6a-851c-3dd9e2e8a23e.t3" />
-    <Content Include="Types\ShowTexture2d_b0212daa-7fba-4f6a-851c-3dd9e2e8a23e.t3ui" />
-    <Content Include="Types\SrvFromTexture2d_c2078514-cf1d-439c-a732-0d7b31b5084a.t3" />
-    <Content Include="Types\SrvFromTexture2d_c2078514-cf1d-439c-a732-0d7b31b5084a.t3ui" />
-    <Content Include="Types\StringConcat_48ab9824-76ca-4238-800f-9cf95311e6c0.t3" />
-    <Content Include="Types\StringConcat_48ab9824-76ca-4238-800f-9cf95311e6c0.t3ui" />
-    <Content Include="Types\StringLength_4c496e8d-2a83-4493-a7a4-fdad29ef3f7d.t3" />
-    <Content Include="Types\StringLength_4c496e8d-2a83-4493-a7a4-fdad29ef3f7d.t3ui" />
-    <Content Include="Types\Sum_2f851b5b-b66d-40b0-9445-e733dc4b907d.t3" />
-    <Content Include="Types\Sum_2f851b5b-b66d-40b0-9445-e733dc4b907d.t3ui" />
-    <Content Include="Types\Texture2d_f52db9a4-fde9-49ca-9ef7-131825c34e65.t3" />
-    <Content Include="Types\Texture2d_f52db9a4-fde9-49ca-9ef7-131825c34e65.t3ui" />
-    <Content Include="Types\TimeConstBuffer_de8bc97a-8ef0-4d4a-9ffa-88046a2daf40.t3" />
-    <Content Include="Types\TimeConstBuffer_de8bc97a-8ef0-4d4a-9ffa-88046a2daf40.t3ui" />
-    <Content Include="Types\Time_862de1a8-f630-4823-8860-7afa918bb1bc.t3" />
-    <Content Include="Types\Time_862de1a8-f630-4823-8860-7afa918bb1bc.t3ui" />
-    <Content Include="Types\UavFromTexture2d_84e02044-3011-4a5e-b76a-c904d9b4557f.t3" />
-    <Content Include="Types\UavFromTexture2d_84e02044-3011-4a5e-b76a-c904d9b4557f.t3ui" />
-    <Content Include="Types\VertexShaderStage_a9600440-4203-4315-bdb1-4dfd603b4515.t3" />
-    <Content Include="Types\VertexShaderStage_a9600440-4203-4315-bdb1-4dfd603b4515.t3ui" />
-    <Content Include="Types\VertexShader_646f5988-0a76-4996-a538-ba48054fd0ad.t3" />
-    <Content Include="Types\VertexShader_646f5988-0a76-4996-a538-ba48054fd0ad.t3ui" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
