--- a/Operators.csproj
+++ b/Operators.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Add.cs" />
+    <Compile Include="Types\BlendStateOp.cs" />
     <Compile Include="Types\ColorGrade.cs" />
     <Compile Include="Types\ComputeShader.cs" />
     <Compile Include="Types\ComputeShaderStage.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Types\PixelShaderStage.cs" />
     <Compile Include="Types\Rasterizer.cs" />
     <Compile Include="Types\RasterizerStateOp.cs" />
+    <Compile Include="Types\RenderTargetBlendDesc.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
