Add operator that creates render target view for a 2d texture

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Types\Rasterizer.cs" />
     <Compile Include="Types\RasterizerStateOp.cs" />
     <Compile Include="Types\RenderTargetBlendDesc.cs" />
+    <Compile Include="Types\RtvFromTexture2d.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
