Added viewport op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Types\UavFromTexture2d.cs" />
     <Compile Include="Types\VertexShader.cs" />
     <Compile Include="Types\VertexShaderStage.cs" />
+    <Compile Include="Types\Viewport.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
