Renamed 'InputAssembler' to 'InputAssemblerStage' and added scene group

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Types\ComputeShaderStage.cs" />
     <Compile Include="Types\ComputeStageExample.cs" />
     <Compile Include="Types\ComputeWobble.cs" />
-    <Compile Include="Types\InputAssembler.cs" />
+    <Compile Include="Types\InputAssemblerStage.cs" />
     <Compile Include="Types\OutputMergerStage.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
     <Compile Include="Types\PixelShader.cs" />
@@ -75,6 +75,7 @@
     <Compile Include="Types\RenderTargetBlendDesc.cs" />
     <Compile Include="Types\RtvFromTexture2d.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
+    <Compile Include="Types\SceneGroup.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
     <Compile Include="Types\TimeConstBuffer.cs" />
