Added draw operator and several bugfixes for initial gpu pipeline example

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Types\ComputeShaderStage.cs" />
     <Compile Include="Types\ComputeStageExample.cs" />
     <Compile Include="Types\ComputeWobble.cs" />
+    <Compile Include="Types\Draw.cs" />
     <Compile Include="Types\InputAssemblerStage.cs" />
     <Compile Include="Types\OutputMergerStage.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
