Renamed 'Scene' to 'Command' and 'SceneGroup' to Execute

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Types\RenderTargetBlendDesc.cs" />
     <Compile Include="Types\RtvFromTexture2d.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
-    <Compile Include="Types\SceneGroup.cs" />
+    <Compile Include="Types\Execute.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
     <Compile Include="Types\TimeConstBuffer.cs" />
