Create gfx pipeline example op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Types\ComputeStageExample.cs" />
     <Compile Include="Types\ComputeWobble.cs" />
     <Compile Include="Types\Draw.cs" />
+    <Compile Include="Types\GfxPipelineExample.cs" />
     <Compile Include="Types\InputAssemblerStage.cs" />
     <Compile Include="Types\OutputMergerStage.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
