Added test structured buffer op and srv from structured buffer op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -79,7 +79,9 @@
     <Compile Include="Types\SamplerStateOp.cs" />
     <Compile Include="Types\Execute.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
+    <Compile Include="Types\SrvFromStructuredBuffer.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
+    <Compile Include="Types\TestParticleBuffer.cs" />
     <Compile Include="Types\TimeConstBuffer.cs" />
     <Compile Include="Types\Dashboard.cs" />
     <Compile Include="Types\FloatFormat.cs" />
