--- a/Operators.csproj
+++ b/Operators.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Types\ShowTexture2d.cs" />
     <Compile Include="Types\SrvFromStructuredBuffer.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
-    <Compile Include="Types\TestParticleBuffer.cs" />
+    <Compile Include="Types\ParticleBuffer.cs" />
     <Compile Include="Types\TimeConstBuffer.cs" />
     <Compile Include="Types\Dashboard.cs" />
     <Compile Include="Types\FloatFormat.cs" />
