Added UavFromStructuredBuffer Op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Types\Sum.cs" />
     <Compile Include="Types\Texture2d.cs" />
     <Compile Include="Types\Time.cs" />
+    <Compile Include="Types\UavFromStructuredBuffer.cs" />
     <Compile Include="Types\UavFromTexture2d.cs" />
     <Compile Include="Types\VertexShader.cs" />
     <Compile Include="Types\VertexShaderStage.cs" />
