Added stub for FilesInFolder

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Types\ComputeStageExample.cs" />
     <Compile Include="Types\ComputeWobble.cs" />
     <Compile Include="Types\Draw.cs" />
+    <Compile Include="Types\FilesInFolder.cs" />
     <Compile Include="Types\GfxPipelineExample.cs" />
     <Compile Include="Types\InputAssemblerStage.cs" />
     <Compile Include="Types\OutputMergerStage.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Types\RtvFromTexture2d.cs" />
     <Compile Include="Types\SamplerStateOp.cs" />
     <Compile Include="Types\Execute.cs" />
+    <Compile Include="Types\GetFromStringList.cs" />
     <Compile Include="Types\ShowTexture2d.cs" />
     <Compile Include="Types\SrvFromStructuredBuffer.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
