--- a/Operators.csproj
+++ b/Operators.csproj
@@ -59,8 +59,10 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Add.cs" />
-    <Compile Include="Types\BlendStateOp.cs" />
     <Compile Include="Types\ColorGrade.cs" />
+    <Compile Include="Types\Multiply.cs" />
+    <Compile Include="Types\BlendStateOp.cs" />
+    <Compile Include="Types\ColorGrade_OBSOLETE.cs" />
     <Compile Include="Types\ComputeShader.cs" />
     <Compile Include="Types\ComputeShaderStage.cs" />
     <Compile Include="Types\ComputeStageExample.cs" />
@@ -71,6 +73,7 @@
     <Compile Include="Types\InputAssemblerStage.cs" />
     <Compile Include="Types\OutputMergerStage.cs" />
     <Compile Include="Types\ParamConstBuffer.cs" />
+    <Compile Include="Types\ColorGradeConstBuffer.cs" />
     <Compile Include="Types\PixelShader.cs" />
     <Compile Include="Types\PixelShaderStage.cs" />
     <Compile Include="Types\Rasterizer.cs" />
@@ -97,6 +100,7 @@
     <Compile Include="Types\Sum.cs" />
     <Compile Include="Types\Texture2d.cs" />
     <Compile Include="Types\Time.cs" />
+    <Compile Include="Types\ToInt.cs" />
     <Compile Include="Types\UavFromStructuredBuffer.cs" />
     <Compile Include="Types\UavFromTexture2d.cs" />
     <Compile Include="Types\VertexShader.cs" />
