Added grouped Particle op and a ClearRenderTarget cmd op
Also updated vertex shader to use shader resources and constant buffer.

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Add.cs" />
     <Compile Include="Types\ColorGrade.cs" />
+    <Compile Include="Types\ClearRenderTarget.cs" />
+    <Compile Include="Types\ParticleRenderPipeline.cs" />
     <Compile Include="Types\Multiply.cs" />
     <Compile Include="Types\BlendStateOp.cs" />
     <Compile Include="Types\ComputeShader.cs" />
