--- a/Operators.csproj
+++ b/Operators.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Types\Add.cs" />
     <Compile Include="Types\ColorGrade.cs" />
     <Compile Include="Types\ClearRenderTarget.cs" />
+    <Compile Include="Types\ParticleIndexBuffer.cs" />
     <Compile Include="Types\ParticleRenderPipeline.cs" />
     <Compile Include="Types\Multiply.cs" />
     <Compile Include="Types\BlendStateOp.cs" />
