Added modulo and renamed Time->RunTime

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Types\Add.cs" />
     <Compile Include="Types\ColorGrade.cs" />
     <Compile Include="Types\ClearRenderTarget.cs" />
+    <Compile Include="Types\Modulo.cs" />
     <Compile Include="Types\ParticleIndexBuffer.cs" />
     <Compile Include="Types\ParticleRenderPipeline.cs" />
     <Compile Include="Types\Multiply.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Types\SrvFromStructuredBuffer.cs" />
     <Compile Include="Types\SrvFromTexture2d.cs" />
     <Compile Include="Types\ParticleBuffer.cs" />
+    <Compile Include="Types\ClipTime.cs" />
     <Compile Include="Types\TimeConstBuffer.cs" />
     <Compile Include="Types\Dashboard.cs" />
     <Compile Include="Types\FloatFormat.cs" />
@@ -101,8 +103,9 @@
     <Compile Include="Types\StringLength.cs" />
     <Compile Include="Types\Sum.cs" />
     <Compile Include="Types\Texture2d.cs" />
-    <Compile Include="Types\Time.cs" />
+    <Compile Include="Types\RunTime.cs" />
     <Compile Include="Types\ToInt.cs" />
+    <Compile Include="Types\TomsShaderTest.cs" />
     <Compile Include="Types\UavFromStructuredBuffer.cs" />
     <Compile Include="Types\UavFromTexture2d.cs" />
     <Compile Include="Types\VertexShader.cs" />
