Added several new ops needed for particle system

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -61,8 +61,10 @@
     <Compile Include="Types\Add.cs" />
     <Compile Include="Types\ColorGrade.cs" />
     <Compile Include="Types\ClearRenderTarget.cs" />
+    <Compile Include="Types\CopyStructureCount.cs" />
     <Compile Include="Types\ExecuteOnce.cs" />
     <Compile Include="Types\Modulo.cs" />
+    <Compile Include="Types\ParticleCountConstBuffer.cs" />
     <Compile Include="Types\ParticleIndexBuffer.cs" />
     <Compile Include="Types\ParticleRenderPipeline.cs" />
     <Compile Include="Types\Multiply.cs" />
@@ -92,6 +94,7 @@
     <Compile Include="Types\SrvFromTexture2d.cs" />
     <Compile Include="Types\ParticleBuffer.cs" />
     <Compile Include="Types\ClipTime.cs" />
+    <Compile Include="Types\StructuredBuffer.cs" />
     <Compile Include="Types\TimeConstBuffer.cs" />
     <Compile Include="Types\Dashboard.cs" />
     <Compile Include="Types\FloatFormat.cs" />
