--- a/Operators.csproj
+++ b/Operators.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Types\ExecuteOnce.cs" />
     <Compile Include="Types\IndirectBuffer.cs" />
     <Compile Include="Types\Modulo.cs" />
+    <Compile Include="Types\Value.cs" />
     <Compile Include="Types\ParticleCountConstBuffer.cs" />
     <Compile Include="Types\ParticleIndexBuffer.cs" />
     <Compile Include="Types\ParticleRenderPipeline.cs" />
