--- a/Operators.csproj
+++ b/Operators.csproj
@@ -63,11 +63,14 @@
     <Compile Include="Types\ColorGrade.cs" />
     <Compile Include="Types\ClearRenderTarget.cs" />
     <Compile Include="Types\CopyStructureCount.cs" />
+    <Compile Include="Types\Div.cs" />
     <Compile Include="Types\DrawInstancedIndirect.cs" />
     <Compile Include="Types\ExecuteOnce.cs" />
     <Compile Include="Types\IndirectBuffer.cs" />
+    <Compile Include="Types\Int3FromInt.cs" />
     <Compile Include="Types\Modulo.cs" />
     <Compile Include="Types\Value.cs" />
+    <Compile Include="Types\ParticleConstants.cs" />
     <Compile Include="Types\ParticleCountConstBuffer.cs" />
     <Compile Include="Types\ParticleIndexBuffer.cs" />
     <Compile Include="Types\ParticleRenderPipeline.cs" />
