--- a/Operators.csproj
+++ b/Operators.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Add.cs" />
+    <Compile Include="Types\Camera.cs" />
     <Compile Include="Types\ColorGrade.cs" />
     <Compile Include="Types\ClearRenderTarget.cs" />
     <Compile Include="Types\CopyStructureCount.cs" />
