--- a/Operators.csproj
+++ b/Operators.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Add.cs" />
+    <Compile Include="Types\ColorFromHSB.cs" />
     <Compile Include="Types\Camera.cs" />
     <Compile Include="Types\ColorGrade.cs" />
     <Compile Include="Types\ClearRenderTarget.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Types\IndirectBuffer.cs" />
     <Compile Include="Types\Int3FromInt.cs" />
     <Compile Include="Types\Modulo.cs" />
+    <Compile Include="Types\PerlinNoise.cs" />
     <Compile Include="Types\Value.cs" />
     <Compile Include="Types\ParticleConstants.cs" />
     <Compile Include="Types\ParticleCountConstBuffer.cs" />
