--- a/Operators.csproj
+++ b/Operators.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Types\Int3FromInt.cs" />
     <Compile Include="Types\Modulo.cs" />
     <Compile Include="Types\PerlinNoise.cs" />
+    <Compile Include="Types\TransformsConstBuffer.cs" />
     <Compile Include="Types\Value.cs" />
     <Compile Include="Types\ParticleConstants.cs" />
     <Compile Include="Types\ParticleCountConstBuffer.cs" />
