Made camera inputs working and added some math ops

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -65,9 +65,12 @@
     <Compile Include="Types\ColorGrade.cs" />
     <Compile Include="Types\ClearRenderTarget.cs" />
     <Compile Include="Types\CopyStructureCount.cs" />
+    <Compile Include="Types\Cos.cs" />
     <Compile Include="Types\Div.cs" />
     <Compile Include="Types\DrawInstancedIndirect.cs" />
     <Compile Include="Types\ExecuteOnce.cs" />
+    <Compile Include="Types\Sin.cs" />
+    <Compile Include="Types\Vector3FromFloat.cs" />
     <Compile Include="Types\IndirectBuffer.cs" />
     <Compile Include="Types\Int3FromInt.cs" />
     <Compile Include="Types\Modulo.cs" />
