Added remap and fixed ColorFromHsb

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Types\IndirectBuffer.cs" />
     <Compile Include="Types\Int3FromInt.cs" />
     <Compile Include="Types\Modulo.cs" />
+    <Compile Include="Types\Remap.cs" />
     <Compile Include="Types\PerlinNoise.cs" />
     <Compile Include="Types\TransformsConstBuffer.cs" />
     <Compile Include="Types\Value.cs" />
