Added FloatConstBuffer and stub for Displace shader

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Types\Camera.cs" />
     <Compile Include="Types\ColorGrade.cs" />
     <Compile Include="Types\ClearRenderTarget.cs" />
+    <Compile Include="Types\FloatConstBuffer.cs" />
+    <Compile Include="Types\Displace.cs" />
     <Compile Include="Types\CopyStructureCount.cs" />
     <Compile Include="Types\Cos.cs" />
     <Compile Include="Types\Div.cs" />
