Added transform op and adjusted context usage

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Types\ResetSubtreeTrigger.cs" />
     <Compile Include="Types\ExecuteOnce.cs" />
     <Compile Include="Types\Sin.cs" />
+    <Compile Include="Types\Transform.cs" />
     <Compile Include="Types\Vector3FromFloat.cs" />
     <Compile Include="Types\IndirectBuffer.cs" />
     <Compile Include="Types\Int3FromInt.cs" />
