Added render target op and setup quad gizmo drawing

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Types\Cos.cs" />
     <Compile Include="Types\Div.cs" />
     <Compile Include="Types\DrawInstancedIndirect.cs" />
+    <Compile Include="Types\RenderTarget.cs" />
     <Compile Include="Types\ResetSubtreeTrigger.cs" />
     <Compile Include="Types\ExecuteOnce.cs" />
     <Compile Include="Types\Sin.cs" />
