--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\ParticleSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Add.cs" />
     <Compile Include="Types\ColorFromHSB.cs" />
