--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,7 +58,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\ParticleSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Add.cs" />
     <Compile Include="Types\ColorFromHSB.cs" />
@@ -71,6 +70,8 @@
     <Compile Include="Types\Cos.cs" />
     <Compile Include="Types\Div.cs" />
     <Compile Include="Types\DrawInstancedIndirect.cs" />
+    <Compile Include="Types\ParticleSystemComponents.cs" />
+    <Compile Include="Types\ParticleSystemSetup.cs" />
     <Compile Include="Types\RenderTarget.cs" />
     <Compile Include="Types\ResetSubtreeTrigger.cs" />
     <Compile Include="Types\ExecuteOnce.cs" />
