--- a/Operators.csproj
+++ b/Operators.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Types\Cos.cs" />
     <Compile Include="Types\Div.cs" />
     <Compile Include="Types\DrawInstancedIndirect.cs" />
+    <Compile Include="Types\ParticleEmitter.cs" />
     <Compile Include="Types\ParticleSystemComponents.cs" />
     <Compile Include="Types\ParticleSystemSetup.cs" />
     <Compile Include="Types\RenderTarget.cs" />
