Added generice particle update op and integrated it

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Types\ParticleEmitter.cs" />
     <Compile Include="Types\ParticleSystemComponents.cs" />
     <Compile Include="Types\ParticleSystemSetup.cs" />
+    <Compile Include="Types\ParticleUpdate.cs" />
     <Compile Include="Types\RenderTarget.cs" />
     <Compile Include="Types\ResetSubtreeTrigger.cs" />
     <Compile Include="Types\ExecuteOnce.cs" />
