Created own specific TestEmitter op and also added Vector4Components

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Types\ResetSubtreeTrigger.cs" />
     <Compile Include="Types\ExecuteOnce.cs" />
     <Compile Include="Types\Sin.cs" />
+    <Compile Include="Types\TestEmitter.cs" />
     <Compile Include="Types\Transform.cs" />
     <Compile Include="Types\Vector3FromFloat.cs" />
     <Compile Include="Types\IndirectBuffer.cs" />
@@ -137,6 +138,7 @@
     <Compile Include="Types\UavFromBuffer.cs" />
     <Compile Include="Types\UavFromStructuredBuffer.cs" />
     <Compile Include="Types\UavFromTexture2d.cs" />
+    <Compile Include="Types\Vector4Components.cs" />
     <Compile Include="Types\VertexShader.cs" />
     <Compile Include="Types\VertexShaderStage.cs" />
     <Compile Include="Types\Viewport.cs" />
