--- a/Operators.csproj
+++ b/Operators.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Types\Sin.cs" />
     <Compile Include="Types\TestEmitter.cs" />
     <Compile Include="Types\Transform.cs" />
+    <Compile Include="Types\Vector3Components.cs" />
     <Compile Include="Types\Vector3FromFloat.cs" />
     <Compile Include="Types\IndirectBuffer.cs" />
     <Compile Include="Types\Int3FromInt.cs" />
