Aligned name of Div and IntDiv

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -68,8 +68,8 @@
     <Compile Include="Types\Displace.cs" />
     <Compile Include="Types\CopyStructureCount.cs" />
     <Compile Include="Types\Cos.cs" />
-    <Compile Include="Types\Div.cs" />
     <Compile Include="Types\DrawInstancedIndirect.cs" />
+    <Compile Include="Types\IntDiv.cs" />
     <Compile Include="Types\ParticleEmitter.cs" />
     <Compile Include="Types\ParticleSystemComponents.cs" />
     <Compile Include="Types\ParticleSystemSetup.cs" />
