Added PartialScene01 and started to group some operators

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -70,10 +70,13 @@
     <Compile Include="Types\Cos.cs" />
     <Compile Include="Types\DrawInstancedIndirect.cs" />
     <Compile Include="Types\IntDiv.cs" />
+    <Compile Include="Types\PartialScene01.cs" />
+    <Compile Include="Types\ParticleDraw.cs" />
     <Compile Include="Types\ParticleEmitter.cs" />
     <Compile Include="Types\ParticleSystemComponents.cs" />
     <Compile Include="Types\ParticleSystemSetup.cs" />
     <Compile Include="Types\ParticleUpdate.cs" />
+    <Compile Include="Types\RenderQuad.cs" />
     <Compile Include="Types\RenderTarget.cs" />
     <Compile Include="Types\ResetSubtreeTrigger.cs" />
     <Compile Include="Types\ExecuteOnce.cs" />
