--- a/Operators.csproj
+++ b/Operators.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Types\CopyStructureCount.cs" />
     <Compile Include="Types\Cos.cs" />
     <Compile Include="Types\DrawInstancedIndirect.cs" />
+    <Compile Include="Types\GetTextureSize.cs" />
     <Compile Include="Types\IntDiv.cs" />
     <Compile Include="Types\PartialScene01.cs" />
     <Compile Include="Types\ParticleDraw.cs" />
