--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,7 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types\BUG01_TransformRotation.cs" />
+    <Compile Include="Types\BUG02_ColorGradeDoesNotUpdateChildren.cs" />
+<Compile Include ="Types\BUG01_TransformRotation.cs" />
 <Compile Include ="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Add.cs" />
     <Compile Include="Types\ColorFromHSB.cs" />
