Editted some partical scenes

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,7 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types\Div.cs" />
+    <Compile Include="Types\TestTestTest2.cs" />
+<Compile Include ="Types\TestTestTest.cs" />
+<Compile Include ="Types\Div.cs" />
 <Compile Include ="Types\Pulsate.cs" />
 <Compile Include ="Types\_ImageFxShaderSetup.cs" />
 <Compile Include ="Types\BUG02_ColorGradeDoesNotUpdateChildren.cs" />
