More curl noise experiements

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,7 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types\CurlNoise.cs" />
+    <Compile Include="Types\ImageQuadEmitter.cs" />
+<Compile Include ="Types\CurlNoise.cs" />
 <Compile Include ="Types\PartialScene02.cs" />
 <Compile Include ="Types\TestTestTest2.cs" />
 <Compile Include ="Types\TestTestTest.cs" />
