Added first stub of ImageQuad

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,7 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types\TestGroup.cs" />
+    <Compile Include="Types\RenderImageQuad.cs" />
+<Compile Include ="Types\TestGroup.cs" />
 <Compile Include ="Types\Crash14ShaderUpdate.cs" />
 <Compile Include ="Types\PartialScene03.cs" />
 <Compile Include ="Types\ImageQuadEmitter.cs" />
