--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,21 +58,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types\RenderImageQuad.cs" />
-<Compile Include ="Types\TestGroup.cs" />
-<Compile Include ="Types\Crash14ShaderUpdate.cs" />
-<Compile Include ="Types\PartialScene03.cs" />
-<Compile Include ="Types\ImageQuadEmitter.cs" />
-<Compile Include ="Types\CurlNoise.cs" />
-<Compile Include ="Types\PartialScene02.cs" />
-<Compile Include ="Types\TestTestTest2.cs" />
-<Compile Include ="Types\TestTestTest.cs" />
-<Compile Include ="Types\Div.cs" />
-<Compile Include ="Types\Pulsate.cs" />
-<Compile Include ="Types\_ImageFxShaderSetup.cs" />
-<Compile Include ="Types\BUG02_ColorGradeDoesNotUpdateChildren.cs" />
-<Compile Include ="Types\BUG01_TransformRotation.cs" />
-<Compile Include ="Properties\AssemblyInfo.cs" />
+    <Compile Include="Types\ImageFx.cs" />
+
+<Compile Include="Types\RenderImageQuad.cs" />
+
+<Compile Include="Types\TestGroup.cs" />
+
+<Compile Include="Types\Crash14ShaderUpdate.cs" />
+
+<Compile Include="Types\PartialScene03.cs" />
+
+<Compile Include="Types\ImageQuadEmitter.cs" />
+
+<Compile Include="Types\CurlNoise.cs" />
+
+<Compile Include="Types\PartialScene02.cs" />
+
+<Compile Include="Types\TestTestTest2.cs" />
+
+<Compile Include="Types\TestTestTest.cs" />
+
+<Compile Include="Types\Div.cs" />
+
+<Compile Include="Types\Pulsate.cs" />
+
+<Compile Include="Types\_ImageFxShaderSetup.cs" />
+
+<Compile Include="Types\BUG02_ColorGradeDoesNotUpdateChildren.cs" />
+
+<Compile Include="Types\BUG01_TransformRotation.cs" />
+
+<Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Add.cs" />
     <Compile Include="Types\ColorFromHSB.cs" />
     <Compile Include="Types\Camera.cs" />
