Added string op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,8 @@
 
 <Compile Include="Types\RenderImageQuad.cs" />
 
+<Compile Include="Types\String.cs" />
+
 <Compile Include="Types\TestGroup.cs" />
 
 <Compile Include="Types\Crash14ShaderUpdate.cs" />
