Little frog demo

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Types\ImageFx.cs" />
+    <Compile Include="Types\RenderImageFx.cs" />
     <Compile Include="Types\RenderImageQuad.cs" />
     <Compile Include="Types\String.cs" />
     <Compile Include="Types\TestGroup.cs" />
