Added op to calculate dispatch count from input and thread group size

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SizeToDispatchCount.cs" />
     <Compile Include="Types\ImageFx.cs" />
     <Compile Include="Types\RenderImageFx.cs" />
     <Compile Include="Types\RenderImageQuad.cs" />
