Added first stub of [Waveform] operator

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ToFloat.cs" />
+    <Compile Include="Types\WaveForm.cs" />
     <Compile Include="Types\SizeToDispatchCount.cs" />
     <Compile Include="Types\ImageFx.cs" />
     <Compile Include="Types\RenderImageFx.cs" />
