--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\BeatTime.cs" />
     <Compile Include="Types\ToFloat.cs" />
     <Compile Include="Types\WaveForm.cs" />
     <Compile Include="Types\SizeToDispatchCount.cs" />
