Playing around with kaleidoscope op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\AnimatedKaleidoscope.cs" />
+    <Compile Include="Types\Vector2FromFloat.cs" />
+    <Compile Include="Types\Vector2Components.cs" />
     <Compile Include="Types\Kaleidoskope.cs" />
     <Compile Include="Types\_ImageFxShaderSetup2.cs" />
     <Compile Include="Types\BeatTime.cs" />
