--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\_multiImageFxSetup.cs" />
+    <Compile Include="Types\Damp.cs" />
     <Compile Include="Types\AnimatedKaleidoscope.cs" />
     <Compile Include="Types\Vector2FromFloat.cs" />
     <Compile Include="Types\Vector2Components.cs" />
