Added Texture parameter to RenderQuad

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Displace2.cs" />
     <Compile Include="Types\_multiImageFxSetup.cs" />
     <Compile Include="Types\Damp.cs" />
     <Compile Include="Types\AnimatedKaleidoscope.cs" />
