Added [CheckBoard] and [Blend] operators

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Blend.cs" />
+    <Compile Include="Types\CheckerBoard.cs" />
     <Compile Include="Types\RoundedRect.cs" />
     <Compile Include="Types\Bloom.cs" />
     <Compile Include="Types\Displace2.cs" />
