--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\NoiseLab.cs" />
+    <Compile Include="Types\TestLab.cs" />
+    <Compile Include="Types\BugMultipleTransforms.cs" />
     <Compile Include="Types\Blend.cs" />
     <Compile Include="Types\CheckerBoard.cs" />
     <Compile Include="Types\RoundedRect.cs" />
