Added KochKaleidoscope effect

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\KochKaleidoskope.cs" />
     <Compile Include="Types\NoiseLab.cs" />
     <Compile Include="Types\TestLab.cs" />
     <Compile Include="Types\BugMultipleTransforms.cs" />
