Added more Kaleidoscope experiments

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\FloorPlanFractal.cs" />
+    <Compile Include="Types\Kaleidorama1.cs" />
+    <Compile Include="Types\Tint.cs" />
     <Compile Include="Types\KochKaleidoskope.cs" />
     <Compile Include="Types\NoiseLab.cs" />
     <Compile Include="Types\TestLab.cs" />
@@ -174,7 +177,6 @@
     <Compile Include="Types\Texture2d.cs" />
     <Compile Include="Types\RunTime.cs" />
     <Compile Include="Types\ToInt.cs" />
-    <Compile Include="Types\TomsShaderTest.cs" />
     <Compile Include="Types\UavFromBuffer.cs" />
     <Compile Include="Types\UavFromStructuredBuffer.cs" />
     <Compile Include="Types\UavFromTexture2d.cs" />
