Added [DotPattern] effect and [MondrianScope1] demo

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\MondrianScope1.cs" />
+    <Compile Include="Types\DotPattern1.cs" />
     <Compile Include="Types\FloorPlanFractal.cs" />
     <Compile Include="Types\Kaleidorama1.cs" />
     <Compile Include="Types\Tint.cs" />
