--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\TimeClip.cs" />
+    <Compile Include="Types\Layer2d.cs" />
+    <Compile Include="Types\Switch.cs" />
     <Compile Include="Types\DomainNoise1.cs" />
     <Compile Include="Types\DotPattern2.cs" />
     <Compile Include="Types\MondrianScope2.cs" />
