Cleaned up TestLab

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Partial.cs" />
     <Compile Include="Types\TimeClip.cs" />
     <Compile Include="Types\Layer2d.cs" />
     <Compile Include="Types\Switch.cs" />
