Fixed NumberPattern op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\NumberPattern.cs" />
+    <Compile Include="Types\SunsetKaleidoskope.cs" />
     <Compile Include="Types\Partial.cs" />
     <Compile Include="Types\TimeClip.cs" />
     <Compile Include="Types\Layer2d.cs" />
