Added demo op that is used by the player for now as main playback scene

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Types\NumberPattern.cs" />
     <Compile Include="Types\SunsetKaleidoskope.cs" />
     <Compile Include="Types\Partial.cs" />
+    <Compile Include="Types\Demo.cs" />
     <Compile Include="Types\TimeClip.cs" />
     <Compile Include="Types\Layer2d.cs" />
     <Compile Include="Types\Switch.cs" />
