Added [Floor] Operator

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Floor.cs" />
     <Compile Include="Types\NoiseClip.cs" />
     <Compile Include="Types\NumberPattern.cs" />
     <Compile Include="Types\SunsetKaleidoskope.cs" />
