Add wipe transition

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\LinearRamp.cs" />
+    <Compile Include="Types\DistortAndShade.cs" />
     <Compile Include="Types\Floor.cs" />
     <Compile Include="Types\NoiseClip.cs" />
     <Compile Include="Types\NumberPattern.cs" />
