--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\TypeGridDraw.cs" />
     <Compile Include="Types\LinearRamp.cs" />
     <Compile Include="Types\DistortAndShade.cs" />
     <Compile Include="Types\Floor.cs" />
@@ -86,6 +87,7 @@
     <Compile Include="Types\RoundedRect.cs" />
     <Compile Include="Types\Bloom.cs" />
     <Compile Include="Types\Displace2.cs" />
+    <Compile Include="Types\TypoGridBuffer.cs" />
     <Compile Include="Types\_multiImageFxSetup.cs" />
     <Compile Include="Types\Damp.cs" />
     <Compile Include="Types\AnimatedKaleidoscope.cs" />
