Added [MaskedBloom] and structured [TypoBuffer]

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,7 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types\TypeGridDraw.cs" />
+    <Compile Include="Types\MaskedBloom.cs" />
+    <Compile Include="Types\TypoGrid.cs" />
     <Compile Include="Types\LinearRamp.cs" />
     <Compile Include="Types\DistortAndShade.cs" />
     <Compile Include="Types\Floor.cs" />
