Fixed sync bug in partial

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\BloomExample.cs" />
+    <Compile Include="Types\TypoGridExample.cs" />
+    <Compile Include="Types\PixturTestLab.cs" />
     <Compile Include="Types\MaskedBloom.cs" />
     <Compile Include="Types\TypoGrid.cs" />
     <Compile Include="Types\LinearRamp.cs" />
@@ -81,7 +84,6 @@
     <Compile Include="Types\Tint.cs" />
     <Compile Include="Types\KochKaleidoskope.cs" />
     <Compile Include="Types\NoiseLab.cs" />
-    <Compile Include="Types\TestLab.cs" />
     <Compile Include="Types\BugMultipleTransforms.cs" />
     <Compile Include="Types\Blend.cs" />
     <Compile Include="Types\CheckerBoard.cs" />
